# Kavosh-Cloudflare-Scanner

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
